--- a/Task1_2_3.ipynb
+++ b/Task1_2_3.ipynb
@@ -284,7 +284,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "data_analysis_env",
    "language": "python",
    "name": "python3"
   },
@@ -298,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
